--- a/app/src/main/res/layout/fragment_mainpage.xml
+++ b/app/src/main/res/layout/fragment_mainpage.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/photoList"
+        android:id="@+id/flickr_photo_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
